--- a/DroolsRuleDemo/pom.xml
+++ b/DroolsRuleDemo/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.winnie</groupId>
-    <artifactId>demo</artifactId>
+    <artifactId>DroolsRuleDemo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>DroolsRuleDemo</name>
     <description>Demo project for Spring Boot</description>
