--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 DroolsDemo/.mvn/
 DroolsRuleDemo/.mvn/
 RuleEngineDemo.iml
+drools-rule-demo/mvnw.cmd
+drools-rule-demo/mvnw
+easy-rule-demo/mvnw
+easy-rule-demo/mvnw.cmd
+easy-rule-demo/.mvn/
