--- a/easy-rule2x-demo/pom.xml
+++ b/easy-rule2x-demo/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>easy-rule-demo</artifactId>
+    <artifactId>easy-rule2x-demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>easy-rule-demo</name>
+    <name>easy-rule2x-demo</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
