--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <modules>
         <module>drools-rule-demo</module>
-        <module>easy-rule-demo</module>
+        <module>easy-rule2x-demo</module>
     </modules>
 
 </project>
