--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ drools-rule-demo/mvnw
 easy-rule-demo/mvnw
 easy-rule-demo/mvnw.cmd
 easy-rule-demo/.mvn/
+easy-rule3x-demo/mvnw
+easy-rule3x-demo/mvnw.cmd
