--- a/easy-rule3x-demo/pom.xml
+++ b/easy-rule3x-demo/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>easy-rule2x-demo</artifactId>
+    <artifactId>easy-rule3x-demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>easy-rule2x-demo</name>
+    <name>easy-rule3x-demo</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -35,9 +35,21 @@
         </dependency>
 
         <dependency>
-            <groupId>org.easyrules</groupId>
-            <artifactId>easyrules-core</artifactId>
-            <version>2.4.0</version>
+            <groupId>org.jeasy</groupId>
+            <artifactId>easy-rules-core</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jeasy</groupId>
+            <artifactId>easy-rules-support</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jeasy</groupId>
+            <artifactId>easy-rules-mvel</artifactId>
+            <version>3.2.0</version>
         </dependency>
 
         <dependency>
