新加入xml方式的drools配置

--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,10 @@
     <version>1.0-SNAPSHOT</version>
 
     <modules>
-        <module>drools-rule-demo</module>
+        <module>drools-rule-demo1</module>
+        <module>drools-rule-demo3</module>
         <module>easy-rule2x-demo</module>
+        <module>easy-rule3x-demo</module>
     </modules>
 
 </project>
