--- a/easy-rule2x-demo/pom.xml
+++ b/easy-rule2x-demo/pom.xml
@@ -41,6 +41,13 @@
         </dependency>
 
         <dependency>
+            <groupId>com.winnie</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
