--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>drools-rule-java-config</module>
         <module>easy-rule2x-demo</module>
         <module>easy-rule3x-demo</module>
+        <module>drools-rule-use</module>
         <module>common</module>
     </modules>
 
